--- a/config/database.yml
+++ b/config/database.yml
@@ -17,12 +17,11 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: localhost
-  username: postgresql
-  password:
+  username: postgres
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
+  host: db
 
 development:
   <<: *default
